 - restructured code to add function process_event() (Alexei)
 - table ALARMS renamed to EVENTS (Alexei)
 - added automatic generation of database schemas (Alexei)
 - pinger will use unique temporary file name (Alexei)
 - developed SLA calculation periods (Eugene)
 - developed flexible update intervals for items (Eugene)

Integrated from 1.1.x

1.1.5

 - fixed function max(#N) (Alexei)
 - do not show connector as ON if trigger disabled (Alexei)
 - fixed calculation of aggregate items under Oracle (Alexei)
 - added support of macro ITEM.NAME (Alexei)
 - fixed some assertions (Eugene)
 - fixed missing last symbol in vfs.file.regexp (Alexei)
 - fixed 'system.cpu.util[*]' for SunOS (Eugene)
 - added availability to using '$' sign for hosts and item keys (Eugene)
 - increased message size for alerts (Eugene)
 - fixed conflict with cookies of other products (Eugene)
 - added sorting by host in trigger status screen (Eugene)
 - added login/logout information into auditlog (Eugene)
 - fixed values viwing on overview screen (Eugene)
 - added support of "system.swap.(in/out)[<swap><,param>]" for Linux 2.x
     <param> accept next values: 'count', 'sectors', 'pages'
     DEFAULT: <swap> = 'all', <param> = 'pages'
     NOTE: pages allowed only when <swap> is 'all' (Eugene)
 - fixed sort order of hosts for trigger overview (Eugene)
 - added filter for disabled items and triggers (Eugene)
 - www.zabbix.com replaced by localhost in agent (Alexei)
 - fixed calculation of sum(#N) (Alexei)
 - fixed temporary files deletion for WinXX agents (Eugene)
 - improved 'service_status[*]' allowed service name and display name (Eugnene)
 - added error reporting of PostgreSQL for frontend (Eugene)
 - fixed sms sender (Eugene)
 - fixed buffer overflow while processing SNMP IP addresses (Alexei)
 - fixed agent's calculation of network statistics (Alexei)
 - fixed some compilation warnings (Alexei)
 - fixed "not equal" condition for hosts and host groups in actions (Alexei)