@@ -69,6 +69,10 @@ Integrated from 1.1.x
 
 1.1.5
 
+ - new macros {PROFILE.DEVICETYPE}, {PROFILE.NAME}, {PROFILE.OS},
+   {PROFILE.SERIALNO}, {PROFILE.TAG}, {PROFILE.MACADDRESS},
+   {PROFILE.HARDWARE}, {PROFILE.SOFTWARE}, {PROFILE.CONTACT},
+   {PROFILE.LOCATION}, {PROFILE.NOTES} (Alexei)
  - fixed function max(#N) (Alexei)
  - do not show connector as ON if trigger disabled (Alexei)
  - fixed calculation of aggregate items under Oracle (Alexei)
